style: fixed contact browser clipping

--- a/src/components/ContactBrowser.css
+++ b/src/components/ContactBrowser.css
@@ -1,6 +1,6 @@
 .ContactBrowser {
     margin-top: 40px;
-    height: calc(100% - 40px);
+    height: 100%;
     background-color: #fff;
     position: relative;
 }
