--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     height: 100%;
+    /* overflow: hidden; */
     /* margin-top: 40px; */
 }
 
@@ -64,6 +65,7 @@
     .Contact{
         display: flex;
         flex-direction: column;
+        overflow: scroll;
     }
     
     .Contact__lhs {
